# HNURM26-Hero

./: .gitignore  README.md  TF_rece.sh  relocation_myservice.sh  relocation_myservice_no_trigger.sh  test_TF.sh  testlivo.sh  重定位方案.md
src/hnurm_bringup/TF/: CMakeLists.txt  package.xml  解释.md
src/hnurm_bringup/TF/launch/: tf_transformer.launch.py  tf_transformer_rviz.launch.py
src/hnurm_bringup/TF/params/: extrinsic.yaml
src/hnurm_bringup/TF/rviz/: tf.rviz
src/hnurm_bringup/TF/src/: tf_transformer_node.cpp
src/hnurm_bringup/TFtestNode/: CMakeLists.txt  package.xml
src/hnurm_bringup/TFtestNode/src/: tf_test_node.cpp
src/hnurm_bringup/trigger_registration/: CMakeLists.txt  Threads.md  package.xml
src/hnurm_bringup/trigger_registration/src/: trigger_hero_node.cpp
src/hnurm_fastlio2/: 适配ros2.md
src/hnurm_fastlio2/FAST-LIVO2/: CMakeLists.txt
src/hnurm_fastlio2/FAST-LIVO2/Log/: mat_out.txt  mat_pre.txt
src/hnurm_fastlio2/FAST-LIVO2/config/: mid360.yaml  nav_mid360.yaml
src/hnurm_fastlio2/FAST-LIVO2/launch/: hnurm_nav.launch.py  mapping_mid360.launch.py
src/hnurm_fastlio2/FAST-LIVO2/src/: LIVMapper.cpp
src/hnurm_fastlio2/livox_ros_driver2/config/: MID360_config.json  display_point_cloud_ROS1.rviz
src/hnurm_fastlio2/livox_ros_driver2/src/: lddc.cpp  lds.cpp
src/hnurm_fastlio2/rpg_vikit/vikit_common/: CMakeLists.txt
src/hnurm_interfaces/msg/uart/: VisionRecvData.msg  VisionSendData.msg
src/hnurm_lidar/livox_ros_driver2/: CMakeLists.txt
src/hnurm_lidar/livox_ros_driver2/config/: MID360_config.json
src/hnurm_lidar/livox_ros_driver2/launch/: msg_MID360_launch.py
src/hnurm_lidar/livox_ros_driver2/src/: lddc.h
src/hnurm_registration/src/Quatro/: CMakeLists.txt
src/hnurm_uart/: CMakeLists.txt  package.xml
src/hnurm_uart/params/: default.yaml
src/hnurm_uart/src/: uart_node.cpp
(+7 files in other folders)
